[package]
name = "glium_sdl2"
version = "0.1.1"
authors = ["Dan Spencer <dan@atomicpotato.net>"]
license = "MIT"
keywords = ["graphics", "gamedev", "glium", "sdl", "opengl"]
documentation = "http://nukep.github.io/glium-sdl2/"
repository = "https://github.com/nukep/glium-sdl2/"
description = "An SDL2 backend for Glium - a high-level OpenGL wrapper for the Rust language."

[dependencies]
sdl2 = "0.4"
libc = "0.1"

[dependencies.glium]
version = "0.4"
# Do not include glutin by default
features = ["image", "nalgebra", "cgmath", "gl_read_buffer", "gl_depth_textures"]
default-features = false

[dev-dependencies]
clock_ticks = "0.0.5"
genmesh = "0.2.1"
obj = "0.2.1"
