[package]
name = "glium_sdl2"
version = "0.8.0"
authors = ["Dan Spencer <dan@atomicpotato.net>"]
license = "MIT"
keywords = ["graphics", "gamedev", "glium", "sdl", "opengl"]
documentation = "http://nukep.github.io/glium-sdl2/"
repository = "https://github.com/nukep/glium-sdl2/"
description = "An SDL2 backend for Glium - a high-level OpenGL wrapper for the Rust language."

[dependencies]
sdl2 = "0.9"
libc = "0.1"

[dependencies.glium]
version = "0.10"
# Do not enable any features by default, as to not bring in unwanted dependencies
# (Cargo seems to apply a "union" of requested features across projects for any given dependency).
# Instead, Let the library user define which features they want.
features = []
default-features = false

[dev-dependencies]
clock_ticks = "0.0.5"
genmesh = "0.2.1"
obj = "0.2.1"
